--- a/engine/lib/engine_web/templates/layout/app.html.eex
+++ b/engine/lib/engine_web/templates/layout/app.html.eex
@@ -29,6 +29,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li><a href="<%= todo_path(@conn, :index) %>">View list</a></li>
+              <li><a href="<%= todo_path(@conn, :new) %>">Add a todo</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
