--- a/engine/lib/engine_web/templates/todo/index.html.eex
+++ b/engine/lib/engine_web/templates/todo/index.html.eex
@@ -1,5 +1,13 @@
 <div class="row">
     <div class="col-lg-12">
+        <p class="alert alert-success" role="alert"><%= get_flash(@conn, :success) %></p>
+        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
         <h2>Thing to do</h2>
     </div>
 </div>
