--- a/engine/lib/engine_web/templates/todo/index.html.eex
+++ b/engine/lib/engine_web/templates/todo/index.html.eex
@@ -20,8 +20,8 @@
                     <td><%= todo.title %></td>
                     <td><%= status(todo) %></td>
                     <td>
-                        Edit
-                        <%= link "Delete", to: "/#{todo.id}", method: "delete" %>
+                        <%= link "Edit", to: "/#{todo.id}/edit", class: "btn btn-info" %>
+                        <%= link "Delete", to: "/#{todo.id}", method: "delete", class: "btn btn-danger" %>
                     </td>
                 </tr>
             <% end %>
