--- a/worker/lib/worker_web/templates/page/index.html.eex
+++ b/worker/lib/worker_web/templates/page/index.html.eex
@@ -1,36 +1,26 @@
-<div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
+<div class="row">
+    <div class="col-lg-12">
+        <p class="alert alert-success" role="alert"><%= get_flash(@conn, :success) %></p>
+        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+    </div>
 </div>
 
-<div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Resources</h4>
-    <ul>
-      <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
-      </li>
-      <li>
-        <a href="https://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-    </ul>
-  </div>
+<div class="row">
+    <div class="col-lg-12">
+        <h2>Thing to do</h2>
+    </div>
+</div>
 
-  <div class="col-lg-6">
-    <h4>Help</h4>
-    <ul>
-      <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
-      </li>
-    </ul>
-  </div>
+<div class="row">
+    <div class="col-lg-12">
+        <table class="table">
+            <%= for todo <- @todos do %>
+                <tr>
+                    <td><%= todo.title %></td>
+                    <td><%= status(todo) %></td>
+                </tr>
+            <% end %>
+        </table>
+    </div>
 </div>
