--- a/worker/lib/worker_web/templates/page/index.html.eex
+++ b/worker/lib/worker_web/templates/page/index.html.eex
@@ -15,9 +15,9 @@
 <div class="row">
     <div class="col-lg-12">
         <table class="table">
-            <%= for todo <- @todos do %>
+            <%= for {id, todo} <- @todos do %>
                 <tr>
-                    <td><%= todo.title %></td>
+                    <td><%= todo["title"] %></td>
                     <td><%= status(todo) %></td>
                 </tr>
             <% end %>
